starting post and comment part

--- a/client/src/style/login.module.css
+++ b/client/src/style/login.module.css
@@ -3,35 +3,17 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: "Open Sans", sans-serif;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  width: 100%;
-  padding: 0 10px;
-}
-
-body::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: url("../images/login.jpg"), #000;
-  background-position: center;
-  background-size: cover;
-}
-
 .wrapper {
+  margin: 100px auto;
   width: 400px;
   border-radius: 8px;
   padding: 30px;
   text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(17, 251, 204, 0.886);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
 }
@@ -44,12 +26,12 @@ form {
 h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #fff;
+  color: rgba(17, 251, 204, 0.886);
 }
 
 .inputfield {
   position: relative;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid rgba(17, 251, 204, 0.886);
   margin: 15px 0;
 }
 .errorMessage {
@@ -60,7 +42,7 @@ h2 {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  color: #fff;
+  color: rgba(17, 251, 204, 0.886);
   font-size: 16px;
   pointer-events: none;
   transition: 0.15s ease;
@@ -73,7 +55,7 @@ h2 {
   border: none;
   outline: none;
   font-size: 16px;
-  color: #fff;
+  color: rgba(182, 253, 239, 0.886);
 }
 
 .inputfield input:focus ~ label,
@@ -88,11 +70,11 @@ h2 {
   align-items: center;
   justify-content: space-between;
   margin: 25px 0 35px 0;
-  color: #fff;
+  color: rgba(17, 251, 204, 0.886);
 }
 
 #remember {
-  accent-color: #fff;
+  accent-color: rgba(17, 251, 204, 0.886);
 }
 
 .forget label {
@@ -105,7 +87,7 @@ h2 {
 }
 
 .wrapper a {
-  color: #efefef;
+  color: rgba(17, 251, 204, 0.886);
   text-decoration: none;
 }
 
@@ -129,11 +111,11 @@ button {
 button:hover {
   color: #fff;
   border-color: #fff;
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(66, 169, 197, 0.15);
 }
 
 .register {
   text-align: center;
   margin-top: 30px;
-  color: #fff;
+  color: rgba(17, 251, 204, 0.886);
 }
